--- a/Web.config
+++ b/Web.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
     <connectionStrings>
-        <add name="strConn" connectionString="User id=sa;Password=batmax;Initial Catalog=GisRI_Prd;data source=LOCALHOST\SQLXE;" providerName="System.Data.SqlClient"/>
+        <add name="strConn" connectionString="User id=sa;Password=batmax;Initial Catalog=GisRI;data source=LOCALHOST\SQLXE;" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <appSettings>
         <add key="Debug" value="S"/>
