Nuovo Sviluppo termine.

--- a/Web.config
+++ b/Web.config
@@ -73,6 +73,7 @@
         </system.web>
     </location>
     <system.web>
+        <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" culture="it-IT" uiCulture="it-IT" />
         <sessionState timeout="240" />
         <!--
           Set compilation debug="true" to insert debugging
