--- a/Web.config
+++ b/Web.config
@@ -61,6 +61,8 @@
         <add key="MailSupport_Dati_M" value="m.sani@mesys.it"/>
         <add key="MailSupport_Appl_M" value="m.sani@mesys.it"/>
 
+        <add key="VerificaVisibilita" value="S"/>
+        
     </appSettings>
     <location path="Messaggi/Nuovo.aspx">
         <system.web>
